--- a/assignments/views/index.html
+++ b/assignments/views/index.html
@@ -10,16 +10,16 @@
 
       <div ng-controller="expMgrCtrl" class="container main">
         <div class="logo">
-            <h3 class="logo-name"><img src="../resource/logo2.png" class="img-responsive logo-img"/> Expense Manager</h3>
+            <h2 class="logo-name"><img src="../resource/pngs/logo.png" class="img-responsive logo-img"/> Expense Manager <small>v1.0</small></h2>
         </div>
         <hr class="hr-line">
         <div class="header">
             <div class="btn-container">
-              <input type="button" class="btn-default" value="Show Income" ng-click="showContent = 'income'"/>
-              <input type="button" class="btn-default" value="Show Expense" ng-click="showContent = 'expense'"/>
+              <button type="submit" class="btn-primary" ng-click="showContent = 'income'"><span class="glyphicon glyphicon-import"></span> Show Income</button>
+              <button type="submit" class="btn-primary" ng-click="showContent = 'expense'"><span class="glyphicon glyphicon-export"></span> Show Expense</button>
             </div>
             <div class="nav-container">
-              <input type="button" class="btn-primary" value="Add New" ng-click="showForm = true"/>
+              <button type="submit" class="btn-primary" ng-click="newRecord()"><span class="glyphicon glyphicon-plus"></span> Add</button>
             </div>
         </div>
 
@@ -30,30 +30,53 @@
                   <div class="panel panel-default">
                       <div class="panel-heading">Expense Details</div>
                       <div class="panel-body">
-                          <form class="form" name="xmAddExp" role="form" ng-submit="addNewRecord('expense')" novalidate>
+                          <form class="form" name="xmAddExp" role="form" ng-submit="xmAddExp.$valid && addRecord('expense')" novalidate>
                               <div class="form-group">
                                   <label for="fname">Expense Type:</label>
                                   <select ng-hide="editingData" class="form-control" ng-model="defaultExpCat" ng-options="item.name for item in expCat track by item.id"></select>
                                   <select ng-show="editingData" class="form-control" ng-model="selectedExpCat" ng-options="item.name for item in expCat track by item.id"></select>
                               </div>
                               <div class="form-group">
-                                  <label for="lname">Amount:</label>{{}}
-                                  <input ng-hide="editingData" type="text" class="form-control" name="amount" ng-model="expAmount" placeholder="Expense Amount" required>
-                                  <input ng-show="editingData" type="text" class="form-control" name="amount" ng-model="editExpAmount" required>
+                                  <label for="lname">Amount:</label>
+                                  <input ng-hide="editingData" type="text" valid-amount class="form-control" name="newExpAmount" ng-model="expAmount" placeholder="Expense Amount" ng-required="!editingData">
+                                  <div ng-messages="xmAddExp.newExpAmount.$error" ng-if="xmAddExp.$submitted && !editingData">
+                                      <div ng-message="required" class="error-msg"><span class="glyphicon glyphicon-info-sign"></span> Enter Amount</div>
+                                  </div>
+                                  <input ng-show="editingData" type="text" valid-amount class="form-control" name="updateExpAmount" ng-model="editExpAmount" ng-required="editingData">
+                                  <div ng-messages="xmAddExp.updateExpAmount.$error" ng-if="xmAddExp.$submitted && editingData">
+                                      <div ng-message="required" class="error-msg"><span class="glyphicon glyphicon-info-sign"></span> Enter Updated Amount</div>
+                                  </div>
                               </div>
                               <div class="form-group">
                                   <label for="email">Date:</label>
-                                  <input ng-hide="editingData" type="text" class="form-control" ng-model="expDate" required>
-                                  <input ng-show="editingData" type="text" class="form-control" ng-model="editExpDate" required>
+                                  <input ng-hide="editingData" type="text" name="newExpDate" class="form-control" ng-model="expDate" ng-required="!editingData">
+                                  <div ng-messages="xmAddExp.newExpDate.$error" ng-if="xmAddExp.$submitted && !editingData">
+                                      <div ng-message="required" class="error-msg"><span class="glyphicon glyphicon-info-sign"></span> Enter Date</div>
+                                  </div>
+                                  <input ng-show="editingData" type="text" name="updateExpDate" class="form-control" ng-model="editExpDate" ng-required="editingData">
+                                  <div ng-messages="xmAddExp.updateExpDate.$error" ng-if="xmAddExp.$submitted && editingData">
+                                      <div ng-message="required" class="error-msg"><span class="glyphicon glyphicon-info-sign"></span> Enter Updated Date</div>
+                                  </div>
                               </div>
                               <div class="form-group">
                                   <label for="age">Mode</label>
                                   <select ng-hide="editingData" class="form-control" ng-model="defaultMode" ng-options="item.name for item in mode track by item.id"></select>
                                   <select ng-show="editingData" class="form-control" ng-model="selectedExpMode" ng-options="item.name for item in mode track by item.id"></select>
                               </div>
+                              <div class="form-group">
+                                  <label for="age">Notes</label>
+                                  <textarea ng-hide="editingData" exp-note ng-maxlength="20" name="newNote" class="form-control no-resize" ng-model="newNote"></textarea>
+                                  <div ng-messages="xmAddExp.newNote.$error" ng-if="!editingData">
+                                      <div ng-message="maxlength" class="error-msg"><span class="glyphicon glyphicon-info-sign"></span> Note cannot exceed more than 20 characters.</div>
+                                  </div>
+                                  <textarea ng-show="editingData" exp-note ng-maxlength="20" name="updateNote" class="form-control no-resize" ng-model="editNote"></textarea>
+                                  <div ng-messages="xmAddExp.updateNote.$error" ng-if="editingData">
+                                      <div ng-message="maxlength" class="error-msg"><span class="glyphicon glyphicon-info-sign"></span> Note cannot exceed more than 20 characters.</div>
+                                  </div>
+                              </div>
                               <button type="submit" ng-hide="editingData" class="btn-primary"><span class="glyphicon glyphicon-save"></span> Submit</button>
                               <button type="submit" ng-show="editingData" class="btn-primary" ng-click="updateRecord()"><span class="glyphicon glyphicon-save"></span> Update</button>
-                              <button type="reset" class="btn-primary" ng-click="showForm = false"><span class="glyphicon glyphicon-remove"></span> Close</button>
+                              <button type="reset" class="btn-primary" ng-click="closeExpForm()"><span class="glyphicon glyphicon-remove"></span> Close</button>
                           </form>
                       </div>
                   </div>
@@ -64,14 +87,15 @@
                         <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
                         <strong>Success!</strong> Expense Updated successfully.
                     </div>
-                    <h3>Total Expense - <span class="badge" ng-bind="expCount"></span></h3>
-                    <table id="expense-table" class="table table-hover table-striped table-bordered">
+                    <h3 class="title">Total Expense - <span class="badge" ng-bind="expCount"></span></h3>
+                    <table id="expense-table" class="table table-hover table-striped">
                         <thead class="table-header">
                           <tr>
                               <th>Expense</th>
                               <th>Amount</th>
                               <th>Date</th>
                               <th>Mode</th>
+                              <th>Note</th>
                               <th class="action-button">&nbsp;</th>
                               <th class="action-button">&nbsp;</th>
                           </tr>
@@ -88,6 +112,9 @@
                                   <div ng-hide="editingData[item.exp_id]">{{item.exp_date}}</div>
                               <td>
                                   <div ng-hide="editingData[item.exp_id]">{{item.mode}}</div>
+                              </td>
+                              <td>
+                                  <div ng-hide="editingData[item.exp_id]">{{item.note}}</div>
                               </td>
                               <td class="action-button">
                                   <button type="submit" class="btn-info" ng-click="modifyExp(item, $index)"><span class="glyphicon glyphicon-pencil"></span> Modify</button>
@@ -107,7 +134,7 @@
                   <div class="panel panel-default">
                       <div class="panel-heading">Income Details</div>
                       <div class="panel-body">
-                      <form class="form" name="xmAddInc" role="form" ng-submit="addNewRecord('income')" novalidate>
+                      <form class="form" name="xmAddInc" role="form" ng-submit="xmAddInc.$valid && addRecord('income')" novalidate>
                           <div class="form-group">
                             <label for="fname">Income Type:</label>
                             <select class="form-control" ng-hide="editingData" ng-model="defaultIncCat" ng-options="item.name for item in incCat track by item.id"></select>
@@ -115,13 +142,25 @@
                           </div>
                           <div class="form-group">
                             <label for="lname">Amount:</label>
-                            <input type="text" ng-hide="editingData" class="form-control" ng-model="incAmount" required>
-                            <input type="text" ng-show="editingData" class="form-control" ng-model="editIncAmount" required>
+                            <input type="text" name="newIncAmount" valid-amount ng-hide="editingData" class="form-control" ng-model="incAmount" ng-required="!editingData">
+                            <div ng-messages="xmAddInc.newIncAmount.$error" ng-if="xmAddInc.$submitted && !editingData">
+                                <div ng-message="required" class="error-msg"><span class="glyphicon glyphicon-info-sign"></span> Enter Amount</div>
+                            </div>
+                            <input type="text" name="updateIncAmount" valid-amount ng-show="editingData" class="form-control" ng-model="editIncAmount" ng-required="editingData">
+                            <div ng-messages="xmAddInc.updateIncAmount.$error" ng-if="xmAddInc.$submitted && editingData">
+                                <div ng-message="required" class="error-msg"><span class="glyphicon glyphicon-info-sign"></span> Enter Updated Amount</div>
+                            </div>
                           </div>
                           <div class="form-group">
                             <label for="email">Date:</label>
-                            <input type="text" ng-hide="editingData" class="form-control" ng-model="incDate" required>
-                            <input type="text" ng-show="editingData" class="form-control" ng-model="editIncDate" required>
+                            <input type="text" name="newIncDate" ng-hide="editingData" class="form-control" ng-model="incDate" ng-required="!editingData">
+                            <div ng-messages="xmAddInc.newIncDate.$error" ng-if="xmAddInc.$submitted && !editingData">
+                                <div ng-message="required" class="error-msg"><span class="glyphicon glyphicon-info-sign"></span> Enter Date</div>
+                            </div>
+                            <input type="text" name="updateIncDate" ng-show="editingData" class="form-control" ng-model="editIncDate" ng-required="editingData">
+                            <div ng-messages="xmAddInc.updateIncDate.$error" ng-if="xmAddInc.$submitted && editingData">
+                                <div ng-message="required" class="error-msg"><span class="glyphicon glyphicon-info-sign"></span> Enter Updated Date</div>
+                            </div>
                           </div>
                           <div class="form-group">
                             <label for="age">Mode</label>
@@ -130,7 +169,7 @@
                           </div>
                           <button type="submit" ng-hide="editingData" class="btn-primary"><span class="glyphicon glyphicon-save"></span> Submit</button>
                           <button type="submit" ng-show="editingData" class="btn-primary" ng-click="updateRecord()"><span class="glyphicon glyphicon-save"></span> Update</button>
-                          <button type="reset" class="btn-primary" ng-click="showForm = false"><span class="glyphicon glyphicon-remove"></span> Close</button>
+                          <button type="reset" class="btn-primary" ng-click="closeIncForm()"><span class="glyphicon glyphicon-remove"></span> Close</button>
                       </form>
                       </div>
                   </div>
@@ -141,10 +180,8 @@
                         <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
                         <strong>Success!</strong> Income Updated successfully.
                     </div>
-                    <button class="btn btn-primary" type="button">
-                        Total Income <span class="badge" ng-bind="incCount"></span>
-                    </button>
-                    <table id="income-table" class="table table-hover table-striped table-bordered">
+                    <h3>Total Income - <span class="badge" ng-bind="incCount"></span></h3>
+                    <table id="income-table" class="table table-hover table-striped">
                         <thead class="table-header">
                           <tr>
                               <th>Income Type</th>
@@ -175,11 +212,14 @@
 
         </div>
 
-        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.20/angular.min.js"></script>
-        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.20/angular-route.min.js"></script>
+        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-route.min.js"></script>
+        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-messages.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
         <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 				<script type="text/javascript" src="../scripts/main.js"></script>
+        <script type="text/javascript" src="../scripts/common/directives/valid-amount.js"></script>
+        <script type="text/javascript" src="../scripts/common/directives/valid-note.js"></script>
 		</body>
 
 </html>
