--- a/assignments/styles/main.css
+++ b/assignments/styles/main.css
@@ -1,35 +1,78 @@
 @font-face {
-    font-family: baseFont;
-    src: url('../resource/fonts/sansation_light.woff');
+		font-family: myFirstFont;
+		src: url('../resource/fonts/3Dumb.ttf');
+}
+@font-face {
+		font-family: mySecondFont;
+		src: url('../resource/fonts/BebasNeueBold.ttf');
 }
 .exp-mgr-wrapper {
-	padding: 10px;
-	background-image: url('../resource/pngs/satinweave.png');
+	background-image: url('../resource/pngs/24.jpg');
 }
-.exp-mgr-wrapper .main .container {
-	margin-top: 10px;
-	padding-left: 0px;
+.exp-mgr-wrapper .min-body {
+	min-height: 550px;
+}
+.page-content {
+	padding: 0px 50px 5px 50px;
+	margin-top: 90px;
 }
 .hr-line {
 	border: 0;
-  height: 1px;
-  background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+  height: 1.6px;
+  background-image: linear-gradient(to right, rgba(0, 0, 0, 0), #032644, rgba(0, 0, 0, 0));
+	margin-bottom: 0px;
+	width: 85%;
 }
 .logo .logo-name {
-	margin: 0 0 20px 0;
+	margin: 0 0 5px 0;
+	font-weight: 600;
 }
 .logo .logo-img {
 	display: inline-block;
 	vertical-align: bottom;
 }
 .logo {
-	color: #31708F;
-	font-family: initial;
+		font-family: myFirstFont;
+		color: #DFE3F2;
+		text-align: left;
+		font-size: 30px;
+}
+.filler {
+		font-family: mySecondFont;
+		color: #ccc;
+    text-align: left;
+    font-size: 95px;
+    line-height: 0.9;
+}
+.main .container-fluid .navbar-header {
+		margin-right: 10px
+}
+.main .container-fluid .nav {
+		font-size: 15px;
+}
+.header {
+		width: 100%;
 }
 .header .btn-nav {
-	color: #eee;
-	background-color: #333;
-	border-color: #333;
+		color: #eee;
+		background-color: #333;
+		border-color: #333;
+}
+.main .navbar {
+		border-radius: 0;
+		background-image: url('../resource/pngs/bg-5-full.jpg');
+		background: rgba(0,0,0,0.6) !important;
+		margin-bottom: 20px;
+		min-height: 65px;
+		border: 0;
+		top: 0;
+		width:100%;
+    position:fixed;
+		color: black;
+		z-index: 999;
+}
+.navbar .container-fluid {
+		margin-top: 8px;
 }
 input.btn-default.btn-nav:hover {
     background-color: #49A3CF;
@@ -37,48 +80,102 @@ input.btn-default.btn-nav:hover {
     border-color: #49A3CF;
 }
 .hidden {
-	display: none;
+		display: none;
 }
 .btn-container {
-	float: right;
+		float: right;
 }
 .new-entry {
-	float: left;
-	width: 50%;
+		float: left;
+		width: 50%;
+		margin-top: 10px;
 }
 .center-align {
-	margin: auto;
-	display: block;
+		margin: auto;
+		display: block;
 }
 .action-button {
-	width: 100px;
+		width: 60px;
+		font-size: 18px;
+}
+.delete {
+		color: red;
+}
+.edit {
+		color: #2c3254;
 }
 .list-container {
-	float: left;
-	width: 100%;
+		width: 100%;
 }
 .list-container .table .edit-row {
-	padding: 2px 12px;
-	height: 25px;
+		padding: 2px 12px;
+		height: 25px;
 }
 .list-container .badge {
-	font-size: 14px;
-	font-weight: normal;
-	background-color: #31708f;
-}
-.table-header {
-	background-color: #2c3254;
-	color: whitesmoke;
+		font-size: 14px;
+		font-weight: normal;
+		color: whitesmoke	;
+		background-color: rgba(49, 112, 143, 0);
+		padding: 5px 9px;
 }
 .error-msg {
-	margin: 3px 0 0 5px;
-	color: red;
+		margin: 3px 0 0 5px;
+		color: red;
 }
 .no-resize {
-	resize: none;
+		resize: none;
+}
+.table-header {
+		background-color: #25072E;
+		color: #ccc;
+		font-family: inherit;
 }
 #income-table, #expense-table {
-	box-shadow: 8px 9px 10px #888888;
-	margin-top: 20px;
-	background-color: #eee;
+		margin-top: 20px;
+		background-color: #eee;
+		box-shadow: 4px 3px 10px rgba(221, 221, 221, 0.64);
+}
+.table td, .table th {
+    border: none;
+}
+table.table.table-hover {
+    border: 1px solid white;
+}
+.list-container .title {
+		font-family: cursive;
+		margin-top: 0px;
+}
+.new-entry .panel {
+		border-radius: 0px;
+		margin-bottom: 35px;
+}
+.new-entry .panel .panel-heading {
+		color: #f5f5f5;
+	  background-color: #25072E;
+	  border-color: #25072E;
+		font-size: 14px;
+		padding: 7px 16px;
+}
+.list-container .badge-container {
+		margin-bottom: -10px;
+		float: right;
+}
+.list-container .badge-container .badge {
+		border-radius: 3px 0 0 0;
+		padding: 8px 10px;
+}
+.record-list {
+		float: left;
+		margin-left: 20px;
+		margin-top: 10px;
+}
+.footer-cntr {
+		margin-top: 15px;
+		width: 100%;
+		height: 35px;
+		background-color: rgba(139, 171, 186, 0.1);
+		padding: 5px;
+		color: whitesmoke;
+		text-align: center;
+		bottom: 0;
 }
