remove local bootstrap and angular library files

--- a/assignments/views/index.html
+++ b/assignments/views/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <link rel="stylesheet" href="../resource/bootstrap/css/bootstrap.min.css">
-      <link rel="stylesheet" href="../resource/font-awesome/css/font-awesome.min.css">
-      <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css"> -->
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+      <!-- <link rel="stylesheet" href="../resource/font-awesome/css/font-awesome.min.css"> -->
       <link rel="stylesheet" type="text/css" href="../styles/main.css">
     </head>
 
@@ -272,13 +272,20 @@
         </div>
         -->
 
+        <!--
         <script type="text/javascript" src="../resource/external/jquery-1.12.0.min.js"></script>
         <script type="text/javascript" src="../resource/external/lodash.js"></script>
         <script type="text/javascript" src="../resource/bootstrap/js/bootstrap.min.js"></script>
         <script type="text/javascript" src="../resource/external/angular.min.js"></script>
         <script type="text/javascript" src="../resource/external/angular-route.min.js"></script>
         <script type="text/javascript" src="../resource/external/angular-messages.min.js"></script>
+        -->
 
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.0/jquery.js"></script>
+        <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.8/angular.min.js"></script>
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.8/angular-messages.min.js"></script>
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.8/angular-route.min.js"></script>
 
         <script type="text/javascript" src="../scripts/main.js"></script>
         <script type="text/javascript" src="../scripts/common/services/data-srv.js"></script>
