--- a/src/views/income.html
+++ b/src/views/income.html
@@ -1,4 +1,4 @@
-<div class="list-container">
+<div class="list-container" ng-init="init()">
 
     <span class="badge-tag">
         <h3 class="title badge inc-badge">
@@ -16,7 +16,7 @@
           <div class="panel panel-default">
               <div class="panel-heading">Income Details</div>
               <div class="panel-body">
-              <form class="form" name="xmAddInc" role="form" ng-submit="xmAddInc.$valid && addRecord('income')" novalidate>
+              <form class="form" name="xmAddInc" role="form" ng-submit="xmAddInc.$valid && addRecord()" novalidate>
 
                 <div class="form-group">
                   <div class="row">
