use http and q services for server calls. replace static data with json file.

--- a/src/views/expense.html
+++ b/src/views/expense.html
@@ -7,7 +7,7 @@
     </span>
 
     <div class="add-new">
-        <img src="resource/pngs/add.png" ng-click="newExpRecord()" data-toggle="tooltip" title="Add Expense"/>
+        <img src="src/resource/pngs/add.png" ng-click="newExpRecord()" data-toggle="tooltip" title="Add Expense"/>
     </div>
 
     <div class="form-record-cntr" ng-show="showForm">
