--- a/src/views/income.html
+++ b/src/views/income.html
@@ -7,7 +7,7 @@
     </span>
 
     <div class="add-new">
-        <img src="resource/pngs/add.png" ng-click="newIncRecord()" data-toggle="tooltip" title="Add Income"/>
+        <img src="src/resource/pngs/add.png" ng-click="newIncRecord()" data-toggle="tooltip" title="Add Income"/>
     </div>
 
     <div class="form-record-cntr" ng-show="showForm">
