--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -6,6 +6,19 @@
 		font-family: mySecondFont;
 		src: url('../resource/fonts/BebasNeueBold.ttf');
 }
+#home-table {
+	margin: 0 auto;
+	width: 80%;
+	background-color: whitesmoke;
+	box-shadow: 3px 2px 10px rgba(221, 221, 221, 0.64);
+}
+#home-table thead{
+	background-color: #25072E;
+	color: whitesmoke;
+}
+#home-table tr td {
+	text-align: left;
+}
 .em-logo {
 	text-decoration: none;
 }
@@ -14,6 +27,10 @@
 }
 .exp-mgr-wrapper .min-body {
 	min-height: 550px;
+}
+.min-body .menus {
+	float: right;
+	margin-right: 10px;
 }
 .page-content {
 	padding: 0px 50px 5px 50px;
@@ -57,7 +74,7 @@
     line-height: 0.9;
 }
 .main .container-fluid .navbar-header {
-		margin-right: 10px
+		margin-left: 10px;
 }
 .main .container-fluid .nav {
 		font-size: 15px;
@@ -193,5 +210,5 @@ table.table.table-hover {
 		bottom: 0;
 }
 .add-new {
-	cursor: default;
+	cursor: pointer;
 }
